# SemanticImageGallery_3D

./: .gitignore  implementation_plan.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 522e7193f7f6_initial_schema.py  a03a176b3d88_add_embedding_status_and_fts5.py
backend/app/: __init__.py  main.py
backend/app/api/: folders.py  images.py  jobs.py  router.py  search.py
backend/app/core/: config.py  database.py  vector_store.py
backend/app/ml/: __init__.py  captioner.py  clip.py  ocr.py
backend/app/models/: models.py
backend/app/pipeline/: indexer.py  scanner.py  thumbnail.py  worker.py
backend/app/schemas/: schemas.py
backend/app/search/: engine.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  router.ts  style.css
frontend/src/components/: ImageCard.vue  ImageDetailModal.vue
frontend/src/composables/: api.ts
frontend/src/stores/: app.ts  gallery.ts
frontend/src/types/: index.ts
frontend/src/views/: GalleryView.vue  SettingsView.vue
