[project]
name = "semantic-image-gallery"
version = "0.1.0"
description = "Local-first AI-powered image management system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pillow>=11.0.0",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "numpy>=1.26.0",
    "open-clip-torch>=2.29.0",
    "lancedb>=0.14.0",
    "pyarrow>=17.0.0",
    "easyocr>=1.7.0",
]

[project.optional-dependencies]
ml-extra = [
    "insightface>=0.7.3",
    "onnxruntime>=1.18.0",
    "easyocr>=1.7.0",
    "hdbscan>=0.8.0",
    "scikit-learn>=1.5.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
